Improved the Projects section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md">
       <h1 class="navbar-brand">Chocoyo Portfolio</h1>
-      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -71,13 +72,16 @@
                 <strong>Flex Stack Coding Boot Camp</strong> at
                 <strong>Kansas University</strong> where I am learning to
                 develop, test, and deploy web and mobile applications using HTML, CSS,
-                JavaScript, Bootstrap, Tailwind CSS, JQuery, Node.JS, Express.JS, Sequelize, MySQL, JawsDB, Express Handlebars, 
-                and other frameworks and libraries including Inquirer, Jest, Dotenv, Express Session, Connect Session Sequelize, 
+                JavaScript, Bootstrap, Tailwind CSS, JQuery, Node.JS, Express.JS, Sequelize, MySQL, JawsDB, Express
+                Handlebars,
+                and other frameworks and libraries including Inquirer, Jest, Dotenv, Express Session, Connect Session
+                Sequelize,
                 Bcrypt, DayJS, Google Fonts, and Font Awesome.
               </p>
               <p class="card-text">
                 On my spare time, I enjoy reading business, science, and technology books, playing chess and
-                basketball with family and friends, and, of course, playing and having fun with my wife and my two kids. I have
+                basketball with family and friends, and, of course, playing and having fun with my wife and my two kids.
+                I have
                 no pets as these little ones keep me busy already.
               </p>
               <p class="card-text">
@@ -118,13 +122,25 @@
                 <strong>Project 1 - Delivery Done Right</strong>
               </div>
               <p class="card-text">
-                Web application allowing users to search and filter
-                restaurants by predefined input fields, including
+                A Javascript web application that allows users to search and filter
+                restaurants near by using predefined search fields that includes
                 <em>food description</em>, <em>zipcode</em>, and
-                <em>distance radius</em>. Features include a Google Map and a
-                list of restaurants near by the user, information listing
-                whether the restaurant has an option to deliver, and
-                nutritional facts about the food (to be improved in a future release).
+                <em>distance</em>.
+              </p>
+              <p>
+                The application provides users with a list of restaurants near by and information on whether the
+                restaurant delivers food to the customer or not. A key feature is that it provides nutritional facts
+                about the chosen food.
+              </p>
+              <p>
+                On the technology side, the application features the use of external APIs including <strong>Google
+                  Maps</strong>,
+                <strong>Nutrition IX</strong>, and <strong>Open Weather</strong>.
+              </p>
+              <p>
+                Finally, the application was developed in conjunction with other students attending the Full Stack
+                Coding Bootcamp at Kansas University.
+                In this project, I fulfilled the roles of Project Manager and Full Stack Developer.
               </p>
               <p class="card-text">
                 Check out the live application in
@@ -151,6 +167,68 @@
           </div>
         </div>
         <!-- End of Project 1 -->
+        <!-- Project 2 -->
+        <div class="row col-12 no-gutters">
+          <div class="col-md-6">
+            <div class="card-body text-justify">
+              <div class="text-center">
+                <strong>Project 2 - The Event Planning</strong>
+              </div>
+              <p class="card-text">
+                A NodeJS application that allows users to organize event details including
+                guests and their preferences. It allows users to register for an account
+                before they are able to create events. Events information is persisted in
+                a MySQL database, and retrieved and/or updated through the use of APIs.
+              </p>
+              <p>
+                The application features the use of the Model-View-Controller (MVC) paradigm.
+                It was developed with <strong>NodeJS</strong>, <strong>Sequelizer</strong>, <strong>ExpressJS</strong>,
+                <strong>MySQL</strong>, <strong>Express Handlebars</strong>, and <strong>Tailwind CSS</strong>, in
+                addition to
+                <em>Bcrypt</em>, <em>Connect Session Sequelize</em>, <em>Dotenv</em>, and <em>Express Session</em>.
+              </p>
+              <p>
+                Like Project 1, the application was developed in conjunction with other students attending the Full
+                Stack Coding Bootcamp at Kansas University.
+                In this project, the team followed best practices for Agile Project Management, and extensively used the
+                Projects feature in GitHub,
+                along with branching, pull requests, merging, and issue tracking. I fulfilled the role of Application
+                Architect and Full Stack Developer.
+              </p>
+              <p class="card-text">
+                Check out the live application in
+                <a href="https://the-event-planning.herokuapp.com/" target="_blank">Heroku
+                  Pages</a>, and the code in
+                <a href="https://github.com/brownnicholasj/the-event-planning" target="_blank">GitHub
+                  Repository</a>. A video demonstrating the application is also provided in <a
+                  href="https://www.youtube.com/watch?v=f7PHbfA8EzE" target="_blank">Youtube</a>.
+              </p>
+              <p class="card-text">
+                The application uses the following technologies:
+              </p>
+              <ul class="d-flex flex-row justify-content-around list-group list-group-horizontal">
+                <li><span class="badge badge-secondary p-2">HTML</span></li>
+                <li><span class="badge badge-secondary p-2">Tailwind CSS</span></li>
+                <li>
+                  <span class="badge badge-secondary p-2">JavaScript</span>
+                </li>
+                <li>
+                  <span class="badge badge-secondary p-2">NodeJS</span>
+                </li>
+                <li><span class="badge badge-secondary p-2">ExpressJS</span></li>
+                <li><span class="badge badge-secondary p-2">MySQL</span></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card-header card-custom">
+              <a href="https://github.com/brownnicholasj/the-event-planning/" target="_blank">
+                <img class="card-img" src="./assets/images/project2.png" alt="The Event Planning" width="50%" />
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- End of Project 2 -->
         <!-- Exemplary Homeworks -->
         <div class="row no-gutters">
           <!-- Exemplary Homework 1 -->
@@ -198,41 +276,133 @@
           <!-- Exemplary Homework 2 -->
           <div class="col-md-6">
             <div class="card-header card-custom">
-              <a href="https://japinell.github.io/KU-CBC-Homework-4-Code-Quiz/" target="_blank">
-                <img class="card-img" src="./assets/images/code-quiz.png" alt="Code Quiz" width="50%" />
+              <a href="https://github.com/japinell/KU-CBC-Homework-12-Employee-Tracker/" target="_blank">
+                <img class="card-img" src="./assets/images/homework12.png" alt="Employee Tracker" width="50%" />
               </a>
             </div>
             <div class="card-body text-justify">
               <p class="card-text text-center">
-                <strong>JavaScript Fundamentals Code Quiz</strong>
+                <strong>Employee Tracker</strong>
               </p>
               <p class="card-text">
-                Timed coding quiz with multiple-choice questions. The
-                application runs in the browser and features dynamically
-                updated HTML and CSS powered by JavaScript. It has a clean,
-                polished, and responsive user interface.
+                A NodeJS application for managing a company's employees using <strong>NodeJS</strong>,
+                <strong>Inquirer</strong>, and <strong>MySQL</strong>.
+                The application makes it easy for end users to view and interact with information stored in the
+                database. It allows users to:
+                <ul>
+                  <li>Add departments, roles, employees</li>
+                  <li>View departments, roles, employees</li>
+                  <li>Update employee roles</li>
+                </ul>
               </p>
               <p class="card-text">
-                Check out the live application in
-                <a href="https://japinell.github.io/KU-CBC-Homework-4-Code-Quiz/" target="_blank">GitHub Pages</a>, and
-                the code in
-                <a href="https://github.com/japinell/KU-CBC-Homework-4-Code-Quiz/" target="_blank">GitHub
-                  Repository</a>.
+                The code is available in the <a href="https://github.com/japinell/KU-CBC-Homework-12-Employee-Tracker/"
+                  target="_blank">GitHub
+                  Repository</a> along with videos demonstrating how to set up, seed, and run the application.
               </p>
               <p class="card-text">
                 The application uses the following technologies:
               </p>
               <ul class="d-flex flex-row justify-content-around list-group list-group-horizontal">
-                <li><span class="badge badge-secondary p-3">HTML</span></li>
-                <li><span class="badge badge-secondary p-3">CSS</span></li>
+                <li><span class="badge badge-secondary p-3">NodeJS</span></li>
+                <li><span class="badge badge-secondary p-3">Inquirer</span></li>
                 <li>
-                  <span class="badge badge-secondary p-3">JavaScript</span>
+                  <span class="badge badge-secondary p-3">MySQL</span>
                 </li>
               </ul>
             </div>
 
           </div>
-          <!-- End of Exemplary Homework 2 -->          
+          <!-- End of Exemplary Homework 2 -->
+          <!-- Exemplary Homework 3 -->
+          <div class="col-md-6">
+            <div class="card-header card-custom">
+              <a href="https://github.com/japinell/KU-CBC-Homework-13-E-Commerce-Back-End/" target="_blank">
+                <img class="card-img" src="./assets/images/homework13.png" alt="E-Commerce Back End" width="50%" />
+              </a>
+            </div>
+            <div class="card-body text-justify">
+              <p class="card-text text-center">
+                <strong>E-Commerce Backend</strong>
+              </p>
+              <p class="card-text">
+                A NodeJS/ExpressJS Back End application to manage a company's Categories, Products, and Tags for an E-Commerce
+                website using <strong>NodeJS</strong>, <strong>ExpressJS</strong>, <strong>Sequelize</strong>, <strong>MySQL</strong>,
+                and <strong>Insomnia</strong>. The application makes it easy to view and/or update information stored in the database. 
+                It allows users to:
+                <ul>
+                  <li>Add categories, products, tags</li>
+                  <li>View categories, products, tags</li>
+                  <li>Update categories, products, tags</li>
+                  <li>Delete categories, products, tags</li>
+                </ul>
+              </p>
+              <p class="card-text">
+                The application features the use of <strong>Database Models</strong> to define the logical structure of the database using Sequelize and MySQL. 
+                The code is available in the <a
+                  href="https://github.com/japinell/KU-CBC-Homework-13-E-Commerce-Back-End/" target="_blank">GitHub
+                  Repository</a> along with videos demonstrating how to set up, seed, and run the application.
+              </p>
+              <p class="card-text">
+                The application uses the following technologies:
+              </p>
+              <ul class="d-flex flex-row justify-content-around list-group list-group-horizontal">
+                <li><span class="badge badge-secondary p-3">NodeJS</span></li>
+                <li><span class="badge badge-secondary p-3">ExpressJS</span></li>
+                <li>
+                  <span class="badge badge-secondary p-3">Sequelize</span>
+                </li>
+                <li>
+                  <span class="badge badge-secondary p-3">MySQL</span>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+          <!-- End of Exemplary Homework 3 -->
+           <!-- Exemplary Homework 4 -->
+           <div class="col-md-6">
+            <div class="card-header card-custom">
+              <a href="https://github.com/japinell/KU-CBC-Homework-14-Tech-Blog/" target="_blank">
+                <img class="card-img" src="./assets/images/homework14.png" alt="Tech Blog" width="50%" />
+              </a>
+            </div>
+            <div class="card-body text-justify">
+              <p class="card-text text-center">
+                <strong>Tech Blog</strong>
+              </p>
+              <p class="card-text">
+                A CMS-style web application where developers can publish their blog posts and comment on other developers’ posts. 
+                The application was built completely from scratch and deployed to Heroku. The application follows the MVC paradigm in its architectural structure, 
+                and uses <strong>Express Handlebars</strong> as the templating language, <strong>Sequelize</strong> as the ORM, and the <strong>express-session</strong> 
+                npm package for authentication.
+              </p>
+              <p class="card-text">
+                The application features the use of <strong>Database Models</strong> to define the logical structure of the database using Sequelize and MySQL. 
+                The code is available in the <a
+                  href="https://github.com/japinell/KU-CBC-Homework-14-Tech-Blog/" target="_blank">GitHub
+                  Repository</a> along with videos demonstrating how to set up, seed, and run the application.
+              </p>
+              <p class="card-text">
+                The application uses the following technologies:
+              </p>
+              <ul class="d-flex flex-row justify-content-around list-group list-group-horizontal">
+                <li><span class="badge badge-secondary p-3">NodeJS</span></li>
+                <li><span class="badge badge-secondary p-3">ExpressJS</span></li>
+                <li>
+                  <span class="badge badge-secondary p-3">Sequelize</span>
+                </li>
+                <li>
+                  <span class="badge badge-secondary p-3">MySQL</span>
+                </li>
+                <li>
+                  <span class="badge badge-secondary p-3">Express Handlebars</span>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+          <!-- End of Exemplary Homework 4 -->
         </div>
         <!-- End of Exemplary Homeworks -->
     </section>
@@ -287,4 +457,5 @@
   <script src="./assets/js/script.js"></script>
   <!-- End of JavaScript Libraries -->
 </body>
+
 </html>
