Small fix to README file

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
            <!-- Exemplary Homework 4 -->
            <div class="col-md-6">
             <div class="card-header card-custom">
-              <a href="https://github.com/japinell/KU-CBC-Homework-14-Tech-Blog/" target="_blank">
+              <a href="https://ku-cbc-homework-14-tech-blog.herokuapp.com/" target="_blank">
                 <img class="card-img" src="./assets/images/homework14.png" alt="Tech Blog" width="50%" />
               </a>
             </div>
