Improved the Projects section

--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
               <p class="card-text">
                 A CMS-style web application where developers can publish their blog posts and comment on other developers’ posts. 
                 The application was built completely from scratch and deployed to Heroku. The application follows the MVC paradigm in its architectural structure, 
-                and uses <strong>Express Handlebars</strong> as the templating language, <strong>Sequelize</strong> as the ORM, and the <strong>express-session</strong> 
-                npm package for authentication.
+                and uses <strong>Express Handlebars</strong> as the templating language, <strong>Sequelize</strong> as the ORM, the <strong>express-session</strong> 
+                npm package for authentication, and <strong>Bootstrap</strong> for styling.
               </p>
               <p class="card-text">
                 The application features the use of <strong>Database Models</strong> to define the logical structure of the database using Sequelize and MySQL. 
