Added link to Likedin Profile

--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
       <!-- Links -->
       <div class="content">
         <a href="" target="" class="phone"> 1-NOT-DIS-CLOSED </a>
-        <a href="mailto:customer@chocoyo.com" target="_blank" class="email">
-          NOT_DISCLOSED@email.com
+        <a href="mailto:japinell@yahoo.com" target="_blank" class="email">japinell@yahoo.com
         </a>
+        <a href="https://www.linkedin.com/in/japinell/" target="_blank" class="linkedin">https://www.linkedin.com/in/japinell/</a>
         <a href="https://github.com/japinell" target="_blank" class="github">https://github.com/japinell</a>
         <a href="https://twitter.com/japinell" target="_blank" class="twitter">https://twitter.com/japinell</a>
         <a href="https://spotify.com/japinell" target="_blank" class="spotify">https://spotify.com/japinell</a>
